css/style.css
@charset "UTF-8";
@font-face {
  font-family: "lato-grid";
  src: url("../fonts/CourierPrime-Bold.woff") format("woff");
  font-weight: bold;
}
@font-face {
  font-family: "lato-grid";
  src: url("../fonts/CourierPrime-Regular.woff") format("woff");
  font-weight: 400;
}
/*Обнуление*/
* {
  padding: 0;
  margin: 0;
  border: 0;
  font-size: 14px;
}

*, *:before, *:after {
  box-sizing: border-box;
}

:focus, :active {
  outline: none;
}

a:focus, a:active {
  outline: none;
}

nav, footer, header, aside, section {
  display: block;
}

html, body {
  height: 100%;
  width: 100%;
  font-size: 100%;
}

body {
  min-width: 320px;
  line-height: 1;
  font-size: 14px;
  font-family: "lato-grid", sans-serif;
  -ms-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

input, button, textarea {
  font-family: inherit;
}

input::-ms-clear {
  display: none;
}

button {
  cursor: pointer;
}

button::moz-focus-inner {
  padding: 0;
  border: 0;
}

a, a:visited {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

ul li {
  list-style: none;
}

img {
  vertical-align: top;
}

h1, h2, h3, h4, h5, h6 {
  font-size: inherit;
  font-weight: inherit;
}

/*------------------------*/
body {
  position: relative;
  margin: 0 auto 0 auto;
  background-color: #FCFCFC;
  overflow-x: hidden;
  opacity: 1;
}

.img-responsive {
  display: block;
  max-width: 100%;
  height: auto;
}

.text-center {
  text-align: center;
}

.container {
  max-width: 1200px;
  padding: 0 10px;
  margin: 0 auto;
}

.wrapper {
  overflow: hidden;
  min-height: 100%;
  background-color: #FCFCFC;
  z-index: -1;
}

.ibg {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  align-content: center;
}
.ibg img {
  display: none;
}

.grid {
  display: grid;
  display: -ms-grid;
}

.lock {
  overflow: hidden;
}

/*$title:#FAECE9;*/
.header {
  position: absolute;
  width: 100%;
  z-index: 2;
  left: 0;
  top: 0.625em;
  min-height: auto;
}
.header__row {
  display: flex;
  font-size: 0;
  justify-content: center;
  align-items: center;
  height: 125px;
}
.header__logo {
  position: absolute;
  left: 50%;
  top: 0;
  transform: translate3d(-50%, 0px, 0px);
  -webkit-transform: translate3d(-50%, 0px, 0px);
  z-index: 10;
}
@media (max-width: 767px) {
  .header {
    top: 15px;
  }
}

@media (max-width: 767px) {
  .menu__icon {
    display: block;
    position: fixed;
    width: 30px;
    height: 18px;
    top: 2.5%;
    right: 5%;
    cursor: pointer;
    z-index: 10;
  }
  .menu__icon span {
    transition: all 0.3s ease 0s;
    background-color: #fff;
    width: 100%;
    height: 2px;
    position: absolute;
    top: 45%;
    left: 0;
    box-shadow: 0px 0px 3px 0.1px #353738;
  }
  .menu__icon span:first-child {
    top: 0px;
  }
  .menu__icon span:last-child {
    top: auto;
    bottom: 0px;
  }
  .menu__icon.active {
    position: fixed;
    margin: 0 0 0 5%;
  }
  .menu__icon.active span {
    transform: scale(0);
    -webkit-transform: scale(0);
    -ms-transform: scale(0);
    background-color: #fff;
  }
  .menu__icon.active span:first-child {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    top: 8px;
  }
  .menu__icon.active span:last-child {
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    bottom: 8px;
  }
}
.menu__body {
  z-index: 9;
}
.menu__list {
  display: flex;
  font-size: 0;
}
.menu__list li {
  position: relative;
  padding: 0px 37.5px;
}
.menu__list li:nth-child(2) {
  padding: 0px 110px 0px 37.5px;
}
.menu__list li:nth-child(3) {
  padding: 0px 37.5px 0px 110px;
}
.menu__list li:after {
  content: "";
  width: 2px;
  height: 2px;
  background-color: #FCFCFC;
  border-radius: 50%;
  position: absolute;
  right: 0;
  top: 45%;
  margin: -1px -0.5px 0 0;
}
.menu__list li:nth-child(2):after, .menu__list li:last-child:after {
  display: none;
}
.menu__link {
  color: #fff;
  font-size: 1em;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 2.6px;
  list-style: none;
  text-shadow: 2px 1px 14px #000000;
  opacity: 0.8;
  transition: all 0.2s ease 0s;
}
.menu__link:hover {
  text-shadow: 2px 5px 10px #000000;
  transform: scale(1.01);
  -webkit-transform: scale(1.01);
  -ms-transform: scale(1.01);
  transition: all 0.3s ease 0s;
  opacity: 1;
}
@media (max-width: 900px) {
  .menu__link {
    font-size: 0.9em;
  }
}
@media (max-width: 767px) {
  .menu__body {
    position: fixed;
    margin: 0 auto 0 auto;
    max-height: auto;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    overflow: auto;
    background-color: #4d4959;
    padding: 150px 0 20px 0;
    transform: translate3d(0px, -100%, 0px);
    -webkit-transform: translate3d(0px, -100%, 0px);
    transition: all 0.5s ease 0.2s;
  }
  .menu__body.active {
    transform: translate3d(0px, 0px, 0px);
    -webkit-transform: translate3d(0px, 0px, 0px);
    transition: all 0.5s ease 0.2s;
  }
  .menu__list {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 auto 0 auto;
    padding-top: 50px;
  }
  .menu__list li {
    padding: 0 0 45px 0;
  }
  .menu__list li:nth-child(2), .menu__list li:nth-child(3) {
    padding: 0 0 45px 0;
  }
  .menu__list li:nth-child(2):after, .menu__list li:nth-child(3):after {
    display: block;
  }
  .menu__list li:last-child {
    padding: 0;
  }
  .menu__list li:after {
    width: 4px;
    height: 4px;
    background-color: #fff;
    right: 50%;
    top: 40px;
    margin: 0 -2px 0 0;
  }
  .menu__link {
    color: #fff;
    font-size: 1.1em;
  }
}
/* ... */

